--- a/example/view.html
+++ b/example/view.html
@@ -1,3 +1,3 @@
 <h1>Hello, I am simple view</h1>
-<p id="foobar">This is paragraph with id="foobar"</p>
-<button id="btn">Press this button to change text</button>
+<p cb-ref="foobar">This is paragraph with id="foobar"</p>
+<button cb-ref="btn">Press this button to change text</button>
